2019-10-31 Thu 12:52:12 PM
notify2 has been replaced by plyer (for Windows compatibility)